# tjdft-api-client

./: .env.example  Makefile  README.md  pyproject.toml  repomix-output.xml
docs/: API.md  EXEMPLOS.md  REFERENCIA.md  UV.md  endpoints.md  examples.md
examples/: agente_jurisprudencia.py  busca_jurisprudencia.py  contagem_tokens.py
scripts/: descobrir_endpoints.py
src/tjdft/: __init__.py  analise.py  client.py  client_optimized.py  models.py  tokens.py
src/tjdft/agent/: __init__.py
tests/: test_client.py  test_e2e.py  test_e2e_oficial.py  test_performance.py
