[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tjdft"
version = "0.4.0"
description = "Cliente Python completo e otimizado para a API de Jurisprudência do TJDFT"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "prof-ramos", email = "contato@proframos.com" }
]
keywords = [
    "tjdft",
    "jurisprudencia",
    "direito",
    "api",
    "legal",
    "brasil",
    "jurisprudence"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
    "cachetools>=5.3.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.9.0",
]
ai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "tjdft[async,ai,dev]",
]

[project.urls]
Homepage = "https://github.com/prof-ramos/tjdft-api-client"
Documentation = "https://github.com/prof-ramos/tjdft-api-client#readme"
Repository = "https://github.com/prof-ramos/tjdft-api-client.git"
Issues = "https://github.com/prof-ramos/tjdft-api-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tjdft"]

[tool.uv]
# Configurações do UV

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
